@@ -1,5 +1,7 @@
 7.1.3
  - gcc10 test build fix: a result iterator is not the same thing as a `row`.
+ - Fix error message in `demangle_type_name`: printed result, not raw name.
+ - Fix compile warning in `demangle_type_name` on GNU systems.
 7.1.2
  - Document build in `BUILDING-configure.md` / `BUILDING-cmake.md`.
  - Work around silly clang warning in `test_errorhandler.cxx`.
